[gd_scene load_steps=14 format=3 uid="uid://bmk45dgiv0bgk"]

[ext_resource type="Script" path="res://scripts/main_menu_scripts/start_menu.gd" id="1_a73is"]
[ext_resource type="Texture2D" uid="uid://c6dgj1k2tddmy" path="res://assets/background/Lighthouse_movement.png" id="2_ve64s"]
[ext_resource type="FontFile" uid="uid://b7ifwnhbxq6y5" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_fknky"]
[ext_resource type="Texture2D" uid="uid://f4a5kyl64epc" path="res://assets/ui/tex_box/speech_bubble.png" id="5_c36bd"]
[ext_resource type="Script" path="res://scripts/main_menu_scripts/copyright.gd" id="5_yjgg4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5ciok"]
atlas = ExtResource("2_ve64s")
region = Rect2(0, 0, 510, 281)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7c3h"]
atlas = ExtResource("2_ve64s")
region = Rect2(0, 281, 510, 281)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrwxq"]
atlas = ExtResource("2_ve64s")
region = Rect2(0, 562, 510, 281)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3miy"]
atlas = ExtResource("2_ve64s")
region = Rect2(0, 843, 510, 281)

[sub_resource type="SpriteFrames" id="SpriteFrames_jaifq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ciok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7c3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrwxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3miy")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}]

[sub_resource type="Animation" id="Animation_pehjs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ljeh5"]
resource_name = "float"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4finx"]
_data = {
"RESET": SubResource("Animation_pehjs"),
"float": SubResource("Animation_ljeh5")
}

[node name="StartMenu" type="Control"]
layout_mode = 3
anchor_right = 1.125
anchor_bottom = 1.123
offset_left = -16.0
offset_top = -1.0
offset_right = -121.0
offset_bottom = -65.848
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a73is")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(528, 288)
scale = Vector2(2.00823, 2.02335)

[node name="OfflineMode" type="Button" parent="."]
layout_mode = 0
offset_left = 409.0
offset_top = 229.0
offset_right = 751.0
offset_bottom = 263.0
theme_override_fonts/font = ExtResource("3_fknky")
theme_override_font_sizes/font_size = 25
text = "© HexOffenders"
flat = true

[node name="SolnBackground" type="AnimatedSprite2D" parent="."]
position = Vector2(527.951, 287.86)
scale = Vector2(2.00804, 2.05082)
sprite_frames = SubResource("SpriteFrames_jaifq")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.89831

[node name="Copyright" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 757.0
offset_top = 404.0
offset_right = 935.0
offset_bottom = 439.0
focus_neighbor_left = NodePath(".")
theme_override_fonts/normal_font = ExtResource("3_fknky")
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
text = "      © HexOffenders"
script = ExtResource("5_yjgg4")

[node name="Tooltip" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 471.0
offset_top = 308.0
offset_right = 687.0
offset_bottom = 349.0

[node name="MarginContainer2" type="MarginContainer" parent="Tooltip"]
layout_mode = 2
offset_right = 222.0
offset_bottom = 174.0

[node name="NinePatchRect" type="NinePatchRect" parent="Tooltip/MarginContainer2"]
layout_mode = 2
texture = ExtResource("5_c36bd")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="Tooltip/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15

[node name="Label" type="Label" parent="Tooltip/MarginContainer2/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.207843, 0.168627, 0.25098, 1)
text = "Maam Maria Macon Concepcion
Divine Alisto
Psalmer Balanza
Chryzel Beray
Paul Dimacali
Benito Zen Lucas
Justine Lucas
Julliard Macatuggal
"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tooltip"]
libraries = {
"": SubResource("AnimationLibrary_4finx")
}
autoplay = "float"

[node name="Copyright2" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 757.0
offset_top = 420.0
offset_right = 940.0
offset_bottom = 441.0
theme_override_fonts/normal_font = ExtResource("3_fknky")
theme_override_font_sizes/normal_font_size = 9
text = "Saint Louis University"

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 700.0
offset_top = 243.0
offset_right = 971.0
offset_bottom = 385.0
theme_override_constants/separation = 20

[node name="Register" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fknky")
theme_override_font_sizes/font_size = 25
text = "Register"
flat = true

[node name="Login" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fknky")
theme_override_font_sizes/font_size = 25
text = "Login"
flat = true

[node name="OfflineMode" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fknky")
theme_override_font_sizes/font_size = 25
text = "Play Offline"
flat = true

[connection signal="button_down" from="OfflineMode" to="." method="_on_offline_mode_button_down"]
[connection signal="mouse_entered" from="Copyright" to="Copyright" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Copyright" to="Copyright" method="_on_mouse_exited"]
[connection signal="button_down" from="Buttons/Register" to="." method="_on_register_button_down"]
[connection signal="button_down" from="Buttons/Login" to="." method="_on_login_button_down"]
[connection signal="button_down" from="Buttons/OfflineMode" to="." method="_on_offline_mode_button_down"]
